Using a container to avoid repositioning on firefox

--- a/src/card3/style.scss
+++ b/src/card3/style.scss
@@ -18,52 +18,64 @@ $card-level-4: #8BC34A;
 	user-select:none;
 	box-sizing: border-box;
 	outline: none;
-	.card-level{
-		text-align: center;
-		position: absolute;
-		border-radius: 50%;
-		outline: inherit;
-		transition: background-color $transition-duration, transform $transition-duration, box-shadow $transition-duration;
 
-		&[data-title]:hover:after {
-		  content: attr(data-title);
-		  padding: 3px 6px;
-		  color: #333;
-		  position: absolute;
-		  left: 0;
-		  bottom: 50%;
-		  z-index: 20;
-		  white-space: nowrap;
-		  border-radius: 5px;
-		  box-shadow: 0px 0px 4px #222;
-		  background-image: linear-gradient(to bottom, rgb(0, 80%, 70%), #8BC34A);
+
+	.card-body{
+		position: relative;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		height: 100%;
+		width: 100%;
+		
+		.card-level{
+			text-align: center;
+			position: absolute;
+			border-radius: 50%;
+			outline: inherit;
+			transition: background-color $transition-duration, transform $transition-duration, box-shadow $transition-duration;
+
+			&[data-title]:hover:after {
+				content: attr(data-title);
+				padding: 3px 6px;
+				color: #333;
+				position: absolute;
+				left: 0;
+				bottom: 50%;
+				z-index: 20;
+				white-space: nowrap;
+				border-radius: 5px;
+				box-shadow: 0px 0px 4px #222;
+				background-image: linear-gradient(to bottom, rgb(0, 80%, 70%), #8BC34A);
+			}
 		}
-	}
-	.card-level-1{
-		width: 100%; height: 100%;
-		background-color: $card-level-1;
-	}
-	.card-level-2{
-		width: 75%; height: 75%;
-		background-color: $card-level-2;		
-	}
-	.card-level-3{
-		width: 50%; height: 50%;
-		background-color: $card-level-3;
-	}
-	.card-level-4{
-		width: 25%; height: 25%;
-		background-color: $card-level-4;
-	}
-	.card-level-5{
-		width: 10px; height: 10px;
-		background-color: #fff;
-	}
-	.card-level:hover, .card-level:focus{
-		background-color: $card-level-hover-bg;
-		transform: scale(1.1);
-		box-shadow: 0 0 1px 1px rgba(0,0,0,.3);
-	}
+		.card-level-1{
+			width: 100%; height: 100%;
+			background-color: $card-level-1;
+		}
+		.card-level-2{
+			width: 75%; height: 75%;
+			background-color: $card-level-2;		
+		}
+		.card-level-3{
+			width: 50%; height: 50%;
+			background-color: $card-level-3;
+		}
+		.card-level-4{
+			width: 25%; height: 25%;
+			background-color: $card-level-4;
+		}
+		.card-level-5{
+			width: 10px; height: 10px;
+			background-color: #fff;
+		}
+		.card-level:hover, .card-level:focus{
+			background-color: $card-level-hover-bg;
+			transform: scale(1.1);
+			box-shadow: 0 0 1px 1px rgba(0,0,0,.3);
+		}
 
+	}
+	
 }
 
